<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    app:strokeColor="?attr/themeColor"
    app:strokeWidth="1dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImg"
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:src="@drawable/sound_good_icon_slash_screen"
            android:contentDescription="@string/song_img"/>

        <TextView
            android:id="@+id/playlistName"
            android:contentDescription="@string/playlist_name"
            android:text="@string/playlist_name"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="130dp"
            android:layout_width="130dp"
            android:layout_height="40dp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/playlistDeleteBtn"
            android:contentDescription="@string/playlist_delete"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginStart="130dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/delete_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:tint="?attr/themeColor" />

</com.google.android.material.card.MaterialCardView>